feat(device) detect brand BQ models: Magic S (BQ-5731L), Charm (BQru-7081), Shark Rush (BQ-5541L)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2635,20 +2635,22 @@ bq:
   regex: 'Aquaris|bq [^/;]+ Build|BQS[-_]([0-9]{4})|(BQ(ru)?[_ -][0-9]{3,4})'
   device: 'smartphone'
   models:
-    - regex: 'BQ(ru)?-(5209L|5044)'
+    - regex: 'BQ(?:ru)?-(?:5209L|5044)[);/ ]'
       model: 'Strike LTE'
-    - regex: 'BQ(ru)?-(6035L)'
+    - regex: 'BQ(?:ru)?-(?:6035L)[);/ ]'
       model: 'Strike Power Max'
-    - regex: 'BQ(ru)?-(5535L)'
+    - regex: 'BQ(?:ru)?-(5535L)[);/ ]'
       model: 'Strike Power Plus'
-    - regex: 'BQ(S|ru)?-(5070|6040L)'
+    - regex: 'BQ(S|ru)?-(5070|6040L)[);/ ]'
       model: 'Magic'
-    - regex: 'BQ(S|ru)?-(5730L)'
+    - regex: 'BQ(?:S|ru)?-(?:5730L)[);/ ]'
       model: 'Magic C'
-    - regex: 'BQ-9011(G)?'
+    - regex: 'BQ(?:S|ru)?-(?:5731L)[);/ ]'
+      model: 'Magic S'
+    - regex: 'BQ-9011[G]?[);/ ]'
       model: 'Vision'
       device: 'tablet'
-    - regex: 'BQ-8068L'
+    - regex: 'BQ-8068L[);/ ]'
       model: 'Hornet Plus Pro'
     - regex: 'BQ-8067L'
       model: 'Hornet Plus'
@@ -2795,6 +2797,8 @@ bq:
       model: 'Velvet'
     - regex: 'BQ(?:ru)?-5033[);/ ]'
       model: 'Shark'
+    - regex: 'BQ-5541L[);/ ]'
+      model: 'Shark Rush'
     - regex: 'BQ-5032[);/ ]'
       model: 'Element'
     - regex: 'BQS-5025[);/ ]'
@@ -2996,6 +3000,9 @@ bq:
       device: 'tablet'
     - regex: 'BQ(?:ru)?-1022l[);/ ]'
       model: 'Armor Pro LTE+'
+      device: 'tablet'
+    - regex: 'BQ(?:ru)?-7081[);/ ]'
+      model: 'Charm'
       device: 'tablet'
     - regex: '(?:bq )?(Aquaris[^/;]*) Build'
       model: '$1'
