--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2835,6 +2835,8 @@ bq:
       model: 'Fun'
     - regex: 'BQS-5002[);/ ]'
       model: 'Colombo'
+    - regex: 'BQS-5003[);/ ]'
+      model: 'Colombo II'
     - regex: 'BQ-5001L[);/ ]'
       model: 'Contact'
     - regex: 'BQS-5001[);/ ]'
@@ -2976,6 +2978,9 @@ bq:
       device: 'tablet'
     - regex: 'BQ-7040G[);/ ]'
       model: 'Сharm Plus'
+      device: 'tablet'
+    - regex: 'BQ-7038G[);/ ]'
+      model: 'Light Plus'
       device: 'tablet'
     - regex: 'BQ-7005G[);/ ]'
       model: 'Maui'
@@ -9865,6 +9870,8 @@ Pixus:
       model: 'Play Two'
     - regex: 'Touch 7 3G'
       model: 'Touch 7 3G'
+    - regex: 'Pixus[ _]hiMax'
+      model: 'HiMax 9.6"'
 
     - regex: 'Raze'
       model: 'Raze'
@@ -14724,13 +14731,15 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Easy-Power-Pro|Power Ice(?: Max)?|Razar_Pro|Power Rage(?: Evo)?|Zera[ _][UFS]|PowerFivePro|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
+  regex: 'HIGHSCREEN|(Easy-Power-Pro|Power Ice(?: Max)?|Razar_Pro|Power Rage(?: Evo)?|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo)|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
   device: 'smartphone'
   models:
     - regex: '(Power Ice(?: Max)?|Power Rage(?: Evo)?|Zera[ _][UFS])[;)/ ]'
       model: '$1'
     - regex: 'PowerFivePro[;)/ ]'
       model: 'Power Five Pro'
+    - regex: 'Power Five Evo[;)/ ]'
+      model: 'Power Five Evo'
     - regex: 'FestXL[;)/ ]'
       model: 'Fest XL'
     - regex: 'PowerFour[;)/ ]'
