feat(device) detect brand Kivi model: 55UR50GR

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15014,7 +15014,7 @@ Spectrum:
 
 # Kivi
 Kivi:
-  regex: '(24H600G[RU]|32HR55GU|4[39]UP50GU|40UR50G[RU]|40U600G[RU]|55UP50GU|50U600GU)[);/ ]'
+  regex: '(24H600G[RU]|32HR55GU|4[39]UP50GU|40UR50G[RU]|40U600G[RU]|55UP50GU|50U600GU|55UR50GR)[);/ ]'
   device: 'tv'
   model: '$1'
 
