feat(device) detect brand Ainol model: Numy 3G AX9 (NUMY3GAX9)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1587,7 +1587,7 @@ Amoi:
 
 # Ainol
 Ainol:
-  regex: 'Numy|novo[0-9]|Novo 10 Hero|AX10PRO'
+  regex: 'Numy|novo[0-9]|Novo 10 Hero|AX10PRO|NUMY3GAX9'
   device: 'tablet'
   models:
     - regex: 'Numy 3G AX1'
@@ -1600,6 +1600,8 @@ Ainol:
       model: 'Numy 3G Talos'
     - regex: 'Numy_3G_BW1'
       model: 'Numy 3G Talos 2'
+    - regex: 'NUMY3GAX9[);/ ]'
+      model: 'Numy 3G AX9'
     - regex: '(Novo 10 Hero QuadCore)'
       model: '$1'
 
