feat(device) detect brand Micromax model: Bolt Pace (Q402+)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -654,6 +654,8 @@ MicroMax:
       model: 'Bolt'
     - regex: 'Q417'
       model: 'Canvas Mega'
+    - regex: 'Q402\+'
+      model: 'Bolt Pace'
     - regex: 'YU5040[);/ ]'
       model: 'YU Yureka YU5040'
     - regex: 'YU5530[);/ ]'
