fix(device) fixed A503 Optima

--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -1596,7 +1596,7 @@
   device:
     type: smartphone
     brand: E7
-    model: B503 Optima
+    model: A503 Optima
   os_family: Android
   browser_family: Chrome
 -
