--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4578,7 +4578,7 @@ Ergo:
     - regex: 'B502 Basic'
       model: 'B502 Basic'
     - regex: 'A503-Optima'
-      model: 'B503 Optima'
+      model: 'A503 Optima'
     - regex: 'B506[_ ]INTRO'
       model: 'B506 Intro'
     - regex: 'V550[_ ]Vision'
