feat(device) detect brand Tecno Mobile model: F4 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12037,6 +12037,8 @@ Tecno Mobile:
       model: 'Phantom 6'
     - regex: 'TECNO-W3'
       model: 'W3'
+    - regex: 'TECNO[ _]F4 Pro[);/ ]'
+      model: 'F4 Pro'
     - regex: 'TECNO[ _]ID6[);/ ]'
       model: 'Camon iClick 2'
     - regex: 'Tecno[ _]7C[);/ ]'
