Improves detection of SISTRIX Optimizer
fixes #6321

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -2384,7 +2384,16 @@
     producer:
       name: SISTRIX GmbH
       url: http://www.sistrix.de
-- 
+-
+  user_agent: Mozilla/5.0 (compatible; Optimizer)
+  bot:
+    name: SISTRIX Optimizer
+    category: Crawler
+    url: https://optimizer.sistrix.com
+    producer:
+      name: SISTRIX GmbH
+      url: http://www.sistrix.de
+-
   user_agent: Mozilla/5.0 (compatible; SISTRIX Optimizer)
   bot:
     name: SISTRIX Optimizer
