--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -1230,7 +1230,7 @@
     name: 'SISTRIX GmbH'
     url: 'http://www.sistrix.de'
 
-- regex: 'SISTRIX Optimizer'
+- regex: 'compatible; (?:SISTRIX )?Optimizer'
   name: 'SISTRIX Optimizer'
   category: 'Crawler'
   url: 'https://optimizer.sistrix.com'
