feat(device) detect brand Santin model: Actoma Ace

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10055,7 +10055,7 @@ Safaricom:
 
 # Santin
 Santin:
-  regex: '(SANTIN|BiTBiZ_V58)[);/_ ]'
+  regex: '(?:SANTIN|BiTBiZ_V58|ACTOMA ACE)[);/_ ]'
   device: 'smartphone'
   models:
     - regex: 'BiTBiZ_V58[);/ ]'
@@ -10064,6 +10064,8 @@ Santin:
       model: 'Green Orange'
     - regex: 'halove[);/ ]'
       model: 'Halove'
+    - regex: 'ACTOMA ACE[);/ ]'
+      model: 'Actoma Ace'
     - regex: 'monica[);/ ]'
       model: 'Monica'
     - regex: 'POWER[);/ ]'
