--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -2279,3 +2279,24 @@
     model: TRA 901G
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 5.1.1; ru-ru; ACTOMA ACE Build/XXXXX) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/46.0.2490.85 Mobile Safari/537.36 XiaoMi/MiuiBrowser/8.1.4
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    short_name: MU
+    version: 8.1.4
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: SQ
+    model: Actoma Ace
+  os_family: Android
+  browser_family: Android Browser
+
