feat(app) detect app: U-Cursos

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -240,3 +240,7 @@
   name: 'UnityPlayer'
   version: '$1'
 
+# (https://play.google.com/store/apps/details?id=cl.uchile.ing.adi.ucursos)
+- regex: 'UCURSOS/v([\d\.]+)'
+  name: 'U-Cursos'
+  version: '$1'
