--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -509,3 +509,20 @@
     model: Y6 Pro
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SM-T515 Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/84.0.4147.125 Safari/537.36 UCURSOS/v1.6_244-android
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: U-Cursos
+    version: "1.6"
+  device:
+    type: tablet
+    brand: SA
+    model: GALAXY Tab A 10.1" (2019)
+  os_family: Android
+  browser_family: Unknown
