feat(device) detect brand Own model: S4035 4G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9696,14 +9696,14 @@ Oysters:
       model: '$1'
 # öwn (own)
 öwn:
-  regex: 'OWN|S4035 3G'
+  regex: 'OWN|S4035[ _][34]G'
   device: 'smartphone'
   models:
     - regex: 'FUN ([67])'
       model: 'Fun $1'
     - regex: 'FUN 5\(4G\)'
       model: 'Fun 5 4G'
-    - regex: '(?:OWN[ _])?(S3000D|S3010|S3020D|S4010|S4025|S4035 3G)'
+    - regex: '(?:OWN[ _])?(S3000D|S3010|S3020D|S4010|S4025|S4035[ _][34]G)'
       model: '$1'
     - regex: 'One Plus'
       model: 'One Plus'
