--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -2299,4 +2299,23 @@
     model: Actoma Ace
   os_family: Android
   browser_family: Android Browser
-
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; S4035_4G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.116 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 79.0.3945.116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: OW
+    model: S4035 4G
+  os_family: Android
+  browser_family: Chrome
