feat(device) detect brand RugGear model: RG710

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15090,7 +15090,7 @@ Shift Phones:
 
 # RugGear
 RugGear:
-  regex: '(RugGear|RG(?:310|500|65[05]|702|850))[);/ ]'
+  regex: '(RugGear|RG(?:310|500|65[05]|702|710|850))[);/ ]'
   device: 'smartphone'
   models:
     - regex: '(RG[0-9]+)[);/ ]'
