feat(device) detect brand Oukitel model: Y4800

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9647,13 +9647,15 @@ Ouki:
 
 # Oukitel
 Oukitel:
-  regex: '(?:C15|C16|K10000)[ _]Pro|U20_Plus'
+  regex: '(?:(?:C15|C16|K10000)[ _]Pro|U20_Plus|Y4800)[ ;/)]'
   device: 'smartphone'
   models:
-    - regex: '(C15|C16|K10000)[ _]Pro'
+    - regex: '(C15|C16|K10000)[ _]Pro[ ;/)]'
       model: '$1 Pro'
-    - regex: 'U20_Plus'
+    - regex: 'U20_Plus[ ;/)]'
       model: 'U20 Plus'
+    - regex: '(Y4800)[ ;/)]'
+      model: '$1'
 
 # Overmax
 Overmax:
