feat(device) detect brand Elephone model: S2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4024,13 +4024,13 @@ Elephone:
   models:
     - regex: 'Elephone[ _\-]([^/;]+) Build'
       model: '$1'
-    - regex: 'P6000(\+| ?Plus) Build'
+    - regex: 'P6000(\+| ?Plus)[);/ ]'
       model: 'P6000 Plus'
-    - regex: 'P6000 02 Build'
+    - regex: 'P6000 02[);/ ]'
       model: 'P6000 02'
-    - regex: 'P6000 ?Pro Build'
+    - regex: 'P6000 ?Pro[);/ ]'
       model: 'P6000 Pro'
-    - regex: '(P[68]000)'
+    - regex: '(?:Elephone[ _])?(P[68]000|S2)[);/ ]'
       model: '$1'
 
 # Element
@@ -14301,7 +14301,7 @@ ZTE:
       model: 'Blade L7A'
     - regex: 'Blade L7[);/ ]'
       model: 'Blade L7'
-    - regex: 'Blade L8?(?:RU)[);/ ]'
+    - regex: 'Blade L8(?:RU)?[);/ ]'
       model: 'Blade L8'
     - regex: 'Blade A3 2019-T[);/ ]'
       model: 'Blade A3 (2019)'
