feat(device) detect brand Vestel model: Venus 5.0X (VSP250S)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12660,7 +12660,7 @@ Verykool:
 
 # Vestel
 Vestel:
-  regex: 'Venus[ _](GO|V[1-9]|Z[1-9]0)|V_?TAB|VP74|VT97PRO|VSP145M|VSP250G|VSP355[GS]'
+  regex: 'Venus[ _](GO|V[1-9]|Z[1-9]0)|V_?TAB|VP74|VT97PRO|VSP145M|VSP250[GS]|VSP355[GS]'
   device: 'smartphone'
   models:
     - regex: 'VT97PRO'
@@ -12682,6 +12682,8 @@ Vestel:
       model: 'Venus 4.5'
     - regex: 'VSP250G'
       model: 'Venus 5.0V'
+    - regex: 'VSP250S'
+      model: 'Venus 5.0X'
     - regex: 'VSP355G'
       model: 'Venus 5.5V'
     - regex: 'VSP355S'
