--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -2419,3 +2419,23 @@
     model: T104B 4G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SMART_Race2_4G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 YaBrowser/19.1.3.198.00 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Yandex Browser
+    short_name: YA
+    version: 19.1.3.198.00
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: M9
+    model: Smart Race 2 4G
+  os_family: Android
+  browser_family: Unknown
