--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14540,7 +14540,7 @@ Lemhoov:
       model: '$1'
 # MTC
 MTC:
-  regex: 'MTC[ _](97[82]|970|982[OT]|982|1078)|(MTC_)?SMART[ _]?(Race|Sprint|Run|Surf[2]?)[ _]4G|MTC975'
+  regex: 'MTC[ _](97[82]|970|982[OT]|982|1078)|(MTC_)?SMART[ _]?(Race[2]?|Sprint|Run|Surf[2]?)[ _]4G|MTC975'
   device: 'smartphone'
   models:
     - regex: 'MTC[ _](97[82]|970[H]?|982[OT]|982)'
@@ -14552,6 +14552,8 @@ MTC:
       device: 'tablet'
     - regex: 'SMART[ _]Race[ _]4G'
       model: 'Smart Race 4G'
+    - regex: 'SMART[ _]Race2[ _]4G'
+      model: 'Smart Race 2 4G'
     - regex: '(MTC_)?SMART[ _]Sprint[ _]4G'
       model: 'Smart Sprint 4G'
     - regex: 'SMART[ _]?Run[ _]4G'
