feat(device) detect brand Umax model: VisionBook 8Qe 3G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14827,7 +14827,7 @@ Umax:
   regex: 'VisionBook[ _]'
   device: 'tablet'
   models:
-    - regex: '(VisionBook[ _](?:7Qi 3G|7Q Plus|8Q LTE|8Q_Plus|10Qi_3G))[;)/ ]'
+    - regex: '(VisionBook[ _](?:10Qi|7Q[i]?|8Q[e]?)(?:[ _](?:[34]G|Plus|LTE))?)[;)/ ]'
       model: '$1'
     - regex: '(VisionBook[ _](?:P50 LTE|P55 LTE(?: Pro)?))[;)/ ]'
       device: 'smartphone'
