--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -2479,3 +2479,23 @@
     model: DUNE
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 5.1; en-US; Beeline_Pro_3 Build/LMY47D) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 UCBrowser/12.13.5.1209 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    short_name: UC
+    version: 12.13.5.1209
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: B5
+    model: Pro 3
+  os_family: Android
+  browser_family: Unknown
