feat(device) detect new brand OzoneHD models: 4K, 4K TV, T2 WiFi

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15686,3 +15686,8 @@ Vipro:
       model: 'Pro 2X'
     - regex: 'VIPRO PRO[ _-]?([0-9])[);/ ]'
       model: 'Pro $1'
+
+OzoneHD:
+  regex: 'OzoneHD[ _](T2 WiFi|4K(?: TV)?)[);/ ]'
+  device: 'tv'
+  model: '$1'
