feat(device) detect brand Wexler model: ULTIMA 7 TWIST PLUS feat(device) detect brand Inoi models: 2 Lite (2019), 2 Lite 4Gb, 2 (2019)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12938,7 +12938,7 @@ WellcoM:
 
 # Wexler
 Wexler:
-  regex: 'Wexler|TAB[ _]10Q[);/ ]|ZEN[ _](?:4\.5|4\.7|5)'
+  regex: 'Wexler|ULTIMA 7 TWIST PLUS|TAB[ _]10Q[);/ ]|ZEN[ _](?:4\.5|4\.7|5)'
   device: 'tablet'
   models:
     - regex: '(?:Wexler[ _\-\.])?ZEN[ _]4\.5[);/ ]'
@@ -12955,6 +12955,8 @@ Wexler:
     - regex: 'Wexler[ _\-\.]([^;/]+) Build'
       model: '$1'
     - regex: 'Wexler[ _\-\.]([^);/]+)[);/]'
+      model: '$1'
+    - regex: '(ULTIMA 7 TWIST PLUS)[);/ ]'
       model: '$1'
 
 # Wiko
@@ -14587,7 +14589,11 @@ Inoi:
   regex: 'INOI'
   device: 'smartphone'
   models:
-    - regex: 'INOI_([^;/]+)(?:Build|\))'
+    - regex: 'INOI 2 Lite 2019'
+      model: '2 Lite (2019)'
+    - regex: 'INOI 2 2019'
+      model: '2 (2019)'
+    - regex: 'INOI[_ ]([^;/]+)(?: Build|\))'
       model: '$1'
 
 # Vertex
