feat(device) detect brand Asus model: ZenFone Go TV (G550KL); feat(device) detect brand Digma models: Optima 7.5" 3G (TT7025MG), CITI 8542 4G

--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -3296,7 +3296,7 @@
   device:
     type: tablet
     brand: D2
-    model: Optima 10.4 3G
+    model: Optima 10.4" 3G
   os_family: Android
   browser_family: Opera
 - 
