feat(device) detect brand Kyocera models: KC-S301AE, Basio 3 (KYV43), Kantan Sumaho (705KC), Gratina 4G (KYF37), Digno Rafre (KYV36) feat(device) detect brand Samsung model: GALAXY S20+ (SCG02)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6985,7 +6985,7 @@ K-Touch:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|(?:503KC|602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-58]|KYF3[19]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[12456]|KYV47-u|X3-KC|S6-KC)[;/) ]'
+  regex: 'Kyocera|KWC-|QC-|(?:503KC|602KC|705KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-68]|KYF3[179]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[1-6]|KYV47-u|KC-S301AE|X3-KC|S6-KC)[;/) ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -7001,6 +7001,8 @@ Kyocera:
       model: 'Digno G'
     - regex: '503KC[;/) ]'
       model: 'Digno E'
+    - regex: 'KYV36[;/) ]'
+      model: 'Digno Rafre'
     - regex: 'C5170[;/) ]'
       model: 'Hydro'
     - regex: 'C5215[;/) ]'
@@ -7029,7 +7031,7 @@ Kyocera:
       model: 'Miraie'
     - regex: 'KYY24[;/) ]'
       model: 'Torque G01'
-    - regex: 'KYF3[19][;/) ]'
+    - regex: 'KYF3[179][;/) ]'
       model: 'Gratina 4G'
     - regex: 'KYV35[;/) ]'
       model: 'Torque G02'
@@ -7039,6 +7041,10 @@ Kyocera:
       model: 'Torque G04'
     - regex: 'KYV47-u[;/) ]'
       model: 'Basio 4'
+    - regex: 'KYV43[;/) ]'
+      model: 'Basio 3'
+    - regex: '705KC[;/) ]'
+      model: 'Kantan Sumaho'
     - regex: 'KYV42[;/) ]'
       model: 'Qua Phone QX'
     - regex: 'KYV44[;/) ]'
@@ -7063,6 +7069,8 @@ Kyocera:
       model: 'DuraForce XD'
     - regex: 'X3-KC[;/) ]'
       model: 'One X3'
+    - regex: '(KC-S301AE)[;/) ]'
+      model: '$1'
 
     # explicit feature phone models
     - regex: 'S2151'
@@ -10106,7 +10114,7 @@ Soundmax:
 
 # Samsung
 Samsung:
-  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CHMKJG]|03[JLK]|04[ELJ]|05G|52A|01[HFGLKM])|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-356]|SCV3[1-9]|40[34]SC|SCL22|SCG01'
+  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CHMKJG]|03[JLK]|04[ELJ]|05G|52A|01[HFGLKM])|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-356]|SCV3[1-9]|40[34]SC|SCL22|SCG0[12]'
   device: 'smartphone'
   models:
     # explicit tv models
@@ -10622,7 +10630,7 @@ Samsung:
       model: 'GALAXY S20 5G'
     - regex: '(?:SAMSUNG-)?SM-G988(?:[0BNUW]|U1)'
       model: 'GALAXY S20 Ultra 5G'
-    - regex: '(?:SAMSUNG-)?SM-G985F'
+    - regex: '(?:SAMSUNG-)?SM-G985F|SCG02'
       model: 'GALAXY S20+'
     - regex: '(?:SAMSUNG-)?SM-G986(?:[0BNUW]|U1)|SC-52A'
       model: 'GALAXY S20+ 5G'
