feat(device) detect brand Bitmore model: Tab1011Q II

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15331,9 +15331,13 @@ PocketBook:
 
 # Bitmore
 Bitmore:
-  regex: '(Mobitab)(10)c-3G[);/ ]'
+  regex: '(?:Mobitab10c-3G|Tab1011Q_II)[);/ ]'
   device: 'tablet'
-  model: '$1 $2C 3G'
+  models:
+    - regex: '(Mobitab)(10)c-3G[);/ ]'
+      model: '$1 $2C 3G'
+    - regex: 'Tab1011Q_II[);/ ]'
+      model: 'Tab1011Q II'
 
 # Kuliao
 Kuliao:
