--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -2839,3 +2839,23 @@
     model: GALAXY S20+
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; Tab1011Q_II Build/KOT49H) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.121 Safari/537.36 OPR/51.0.2461.137246
+  os:
+    name: Android
+    short_name: AND
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: 51.0.2461.137246
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: B7
+    model: Tab1011Q II
+  os_family: Android
+  browser_family: Opera
