feat(device) detect new brand Kzen model: Ureki U1 feat(device) detect brand Ulefone model: Armor 6S

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12445,7 +12445,7 @@ UTStarcom:
 
 # Ulefone
 Ulefone:
-  regex: 'Ulefone|Gemini Pro|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[237]|X6))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
+  regex: 'Ulefone|Gemini Pro|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[237]|X6|6S))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
   device: 'smartphone'
   models:
     - regex: 'S10_Pro'
@@ -12474,6 +12474,8 @@ Ulefone:
       model: 'Armor 7'
     - regex: 'Armor[ _]X6[);\ ]'
       model: 'Armor X6'
+    - regex: 'Armor[ _]6S[);\ ]'
+      model: 'Armor 6S'
     - regex: 'Armor[);\ ]'
       model: 'Armor'
     - regex: 'Gemini Pro[);\ ]'
@@ -15712,7 +15714,14 @@ Vipro:
     - regex: 'VIPRO PRO[ _-]?([0-9])[);/ ]'
       model: 'Pro $1'
 
+# OzoneHD
 OzoneHD:
   regex: 'OzoneHD[ _](T2 WiFi|4K(?: TV)?)[);/ ]'
   device: 'tv'
   model: '$1'
+
+# KZEN
+Kzen:
+  regex: 'Ureki_U1[);/ ]'
+  device: 'smartphone'
+  model: 'Ureki U1'
