feat(device) detect brand Krüger&Matz model: EAGLE 1066 10.1" (KM1066)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7086,7 +7086,7 @@ Kyocera:
 
 # Krüger&Matz (Kruger&Matz)
 Krüger&Matz:
-  regex: 'Kruger[ _&]Matz|MOVE_|LIVE4_KM043[89]'
+  regex: 'Kruger[ _&]Matz|MOVE_|LIVE4_KM043[89]|KM1066'
   device: 'smartphone'
   models:
     - regex: 'MOVE_6_mini'
@@ -7105,6 +7105,10 @@ Krüger&Matz:
       model: 'LIVE 4 $1'
     - regex: '_LIVE5_(KM0450)[;/) ]'
       model: 'LIVE 5 $1'
+
+    - regex: 'KM(1066)[;/) ]'
+      device: 'tablet'
+      model: 'EAGLE $1 10.1"'
 
 # LAIQ
 LAIQ:
