feat(device) detect brand Nobby model: S300

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8909,7 +8909,7 @@ NOA:
       model: '$1'
 
 Nobby:
-  regex: 'Nobby[ ](S500|X800|S300 Pro)[;/) ]'
+  regex: 'Nobby[ ](S500|X800|S300(?: Pro)?)[;/) ]'
   device: 'smartphone'
   model: '$1'
 
