--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3980,14 +3980,14 @@ EBEST:
 
 # Echo Mobiles
 Echo Mobiles:
-  regex: 'ECHO[ _](HOLI|HORIZON|MAX|MOSS|NOTE|POWER|SMART|DUNE)'
+  regex: 'ECHO[ _](HOLI|HORIZON|MAX|MOSS|NOTE|POWER|SMART|DUNE|JAVA)'
   device: 'smartphone'
   models:
     - regex: 'ECHO_HORIZON_LITE'
       model: 'HORIZON Lite'
     - regex: 'ECHO_SMART_4G'
       model: 'SMART 4G'
-    - regex: 'ECHO[ _](HOLI|MAX|MOSS|NOTE|POWER|SMART|DUNE)'
+    - regex: 'ECHO[ _](HOLI|MAX|MOSS|NOTE|POWER|SMART|DUNE|JAVA)'
       model: '$1'
 
 # ECS
@@ -14786,7 +14786,7 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Easy-Power-Pro|Power Ice(?: Max|)?|Razar_Pro|Power Rage(?: Evo)?|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo)|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
+  regex: 'HIGHSCREEN|(Easy-Power-Pro|Power Ice(?: Max)?|Easy_S_Pro|Razar_Pro|Power Rage(?: Evo)?|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo)|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
   device: 'smartphone'
   models:
     - regex: '(Power Ice(?:[ ](?:Max|Evo))?|Power Rage(?: Evo)?|Zera[ _][UFS])[;)/ ]'
@@ -14801,6 +14801,8 @@ Highscreen:
       model: 'Power Four'
     - regex: 'Razar_Pro[;)/ ]'
       model: 'Razar Pro'
+    - regex: 'Easy_S_Pro[;)/ ]'
+      model: 'Easy S Pro'
     - regex: '(?:HIGHSCREEN )?Easy-Power-Pro[;)/ ]'
       model: 'Easy Power Pro'
     - regex: 'HIGHSCREEN Easy F PRO[;)/ ]'
