feat(device) detect brand Asus model: ROG Phone (ZS600KL) feat(device) detect brand Zidoo model: Z10

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1823,7 +1823,7 @@ Garmin-Asus:
 
 # Asus
 Asus:
-  regex: 'Asus|Transformer|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)[);/ ]|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(520|620|55[2345])KL|ZD55[23]KL|ZS(6[236]0|55[10])KL|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE'
+  regex: 'Asus|Transformer|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)[);/ ]|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(520|620|55[2345])KL|ZD55[23]KL|ZS600KL|ZS(6[236]0|55[10])KL|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -2036,7 +2036,7 @@ Asus:
       model: 'ZenFone Max Pro'
     - regex: '(?:ASUS_)?Z00XS'
       model: 'ZenFone Zoom'
-    - regex: '(?:ASUS_)?Z01QD'
+    - regex: '(?:ASUS_)?(?:Z01QD|ZS600KL)'
       model: 'ROG Phone'
     - regex: '(?:ASUS_)?(I001D[ABCE]?|ZS660KL)'
       model: 'ROG Phone 2'
@@ -15189,7 +15189,7 @@ Soyes:
 
 # Zidoo
 Zidoo:
-  regex: 'ZIDOO[ _](H6 Pro|X9S)[);/ ]'
+  regex: 'ZIDOO[ _](H6 Pro|X9S|Z10)[);/ ]'
   device: 'tv'
   model: '$1'
 
