feat(device) detect brand new Melrose model: S9 feat(device) detect brand Echo Mobiles model: HORIZON M feat(device) detect brand Irbis model: TZ745 feat(device) detect brand MLS model: Notch Lite (iQL550) feat(device) detect brand Digma model: CITI 1544 3G (CITI_1544_3G_CS1154MG)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3750,7 +3750,7 @@ Digiland:
 
 # Digma
 Digma:
-  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI ATL 4G|CITI Octa 80|CITI 1902 3G|CITI Z530 3G|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _]C[ST](11[49]4MG|3001ML|500[67]PG|8209MG|8139ML|8152ML)|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|Linx A400 3G LT4001PG|Linx C500 3G LT5001PG|Linx PS474S|LS504[01]PL|LT40(47|54)MG|LS405[01]MG|LS5053ML|LT5048MG|LT5052ML|HT5035PG|HT4039PG|LT4049PG|NS6902QL|NS9797MG|TT1004PG|TT7025MG|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
+  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI ATL 4G|CITI Octa 80|CITI 1902 3G|CITI Z530 3G|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _]C[ST](11[459]4MG|3001ML|500[67]PG|8209MG|8139ML|8152ML)|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|Linx A400 3G LT4001PG|Linx C500 3G LT5001PG|Linx PS474S|LS504[01]PL|LT40(47|54)MG|LS405[01]MG|LS5053ML|LT5048MG|LT5052ML|HT5035PG|HT4039PG|LT4049PG|NS6902QL|NS9797MG|TT1004PG|TT7025MG|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
   device: 'smartphone'
   models:
     - regex: 'HIT HT707[10]MG'
@@ -3821,7 +3821,7 @@ Digma:
     - regex: '(CITI_8527_4G|CITI Octa 80)'
       model: '$1'
       device: 'tablet'
-    - regex: '(CITI[ _](?:[A-Z0-9]+)[ _][34]G)[ _]C[ST](?:3001ML|500[67]PG|8209MG|1144MG|3001ML|1194MG|8152ML)'
+    - regex: '(CITI[ _](?:[A-Z0-9]+)[ _][34]G)[ _]C[ST](?:3001ML|500[67]PG|8209MG|11[459]4MG|3001ML|8152ML)'
       model: '$1'
       device: 'tablet'
     - regex: 'iDxD8 3G'
@@ -3980,11 +3980,13 @@ EBEST:
 
 # Echo Mobiles
 Echo Mobiles:
-  regex: 'ECHO[ _](HOLI|HORIZON|MAX|MOSS|NOTE|POWER|SMART|DUNE|JAVA)'
+  regex: 'ECHO[ _](HOLI|HORIZON|MAX|MOSS|NOTE|POWER|SMART|DUNE|JAVA)|HORIZON_M'
   device: 'smartphone'
   models:
     - regex: 'ECHO_HORIZON_LITE'
       model: 'HORIZON Lite'
+    - regex: '(HORIZON_M)[);/ ]'
+      model: '$1'
     - regex: 'ECHO_SMART_4G'
       model: 'SMART 4G'
     - regex: 'ECHO[ _](HOLI|MAX|MOSS|NOTE|POWER|SMART|DUNE|JAVA)'
@@ -6109,7 +6111,7 @@ iRulu:
 
 # Irbis
 Irbis:
-  regex: 'TZ(1(?:00|42|50|84|65|7[035-89]|9[578])|49|7(?:1[2467]|2[01567]|37|4[27]|5[23457]|62|72|7[17]|8[1]|9[47])|8(?:[34]1|5[3-8]|6[45]|7[2478]|8[1-5]|9[0127])|96[0-9])|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|50|51[0147]|531|55[012]))[;)\ ]'
+  regex: 'TZ(1(?:00|42|50|84|65|7[035-89]|9[578])|49|7(?:1[2467]|2[01567]|37|4[257]|5[23457]|62|72|7[17]|8[1]|9[47])|8(?:[34]1|5[3-8]|6[45]|7[2478]|8[1-5]|9[0127])|96[0-9])|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|50|51[0147]|531|55[012]))[;)\ ]'
   device: 'tablet'
   models:
     - regex: '(TZ(?:[0-9]+)|TZ(?:one|art|HIT|81L))[;)\ ]'
@@ -13717,102 +13719,104 @@ Vivax:
 
 # MLS
 MLS:
-  regex: 'IQ(?:0705|1010w?|1012|1025|1380|1401|1436|1452a|1453|1470|1502a|1511|1552|1553|1568|1570|1806|1808|1810B_M|1832|1850|1890|5017|9610|E100|EL41|G550|GW516|L30|L5[01]|M801|M1001|N700|P50|R300|S300|S1001|W511T|W553|W608|W626)[;)/ ]'
+  regex: 'IQ(?:0705|L550|1010w?|1012|1025|1380|1401|1436|1452a|1453|1470|1502a|1511|1552|1553|1568|1570|1806|1808|1810B_M|1832|1850|1890|5017|9610|E100|EL41|G550|GW516|L30|L5[01]|M801|M1001|N700|P50|R300|S300|S1001|W511T|W553|W608|W626)[;)/ ]'
   device: 'smartphone'
   models:
-    - regex: 'IQ0705'
+    - regex: 'IQ0705[;)/ ]'
       model: 'iQTalk Twist'
-    - regex: 'IQ1010W?'
+    - regex: 'IQL550[;)/ ]'
+      model: 'Notch Lite'
+    - regex: 'IQ1010W?[;)/ ]'
       model: 'iQTab 10'
       device: 'tablet'
-    - regex: 'IQ1012'
+    - regex: 'IQ1012[;)/ ]'
       model: 'iQTab Brave 3G'
       device: 'tablet'
-    - regex: 'IQ1025'
+    - regex: 'IQ1025[;)/ ]'
       model: 'iQTab Action 4G'
       device: 'tablet'
-    - regex: 'IQ1380'
+    - regex: 'IQ1380[;)/ ]'
       model: 'Brain 3G'
-    - regex: 'IQ1401'
+    - regex: 'IQ1401[;)/ ]'
       model: 'iQTalk Verse 4G'
-    - regex: 'IQ1436'
+    - regex: 'IQ1436[;)/ ]'
       model: 'Color mini 4G'
-    - regex: 'IQ1452a'
+    - regex: 'IQ1452a[;)/ ]'
       model: 'TOP-S 4G'
-    - regex: 'IQ1453'
+    - regex: 'IQ1453[;)/ ]'
       model: 'Trend 4G'
-    - regex: 'IQ1470'
+    - regex: 'IQ1470[;)/ ]'
       model: 'iQTalk Onyx'
-    - regex: 'IQ1502a'
+    - regex: 'IQ1502a[;)/ ]'
       model: 'iQTalk Flame'
-    - regex: 'IQ1511'
+    - regex: 'IQ1511[;)/ ]'
       model: 'iQTalk Spicy'
-    - regex: 'IQ1552'
+    - regex: 'IQ1552[;)/ ]'
       model: 'iQTalk Titan 4G'
-    - regex: 'IQ1553'
+    - regex: 'IQ1553[;)/ ]'
       model: 'Color 3 4G'
-    - regex: 'IQ1568'
+    - regex: 'IQ1568[;)/ ]'
       model: 'Range 4G'
-    - regex: 'IQ1570'
+    - regex: 'IQ1570[;)/ ]'
       model: 'iQTalk Color 5.5 4G'
-    - regex: 'IQ1806'
+    - regex: 'IQ1806[;)/ ]'
       model: 'iQTab Rose'
       device: 'tablet'
-    - regex: 'IQ1808'
+    - regex: 'IQ1808[;)/ ]'
       model: 'iQTab Master'
       device: 'tablet'
-    - regex: 'IQ1810B_M'
+    - regex: 'IQ1810B_M[;)/ ]'
       model: 'iQTab Novel 3G'
       device: 'tablet'
-    - regex: 'IQ1832'
+    - regex: 'IQ1832[;)/ ]'
       model: 'Jet 3G'
       device: 'tablet'
-    - regex: 'IQ1850'
+    - regex: 'IQ1850[;)/ ]'
       model: 'Diamond 5.2 4G'
-    - regex: 'IQ1890'
+    - regex: 'IQ1890[;)/ ]'
       model: 'iQTalk Aura'
-    - regex: 'IQ5017'
+    - regex: 'IQ5017[;)/ ]'
       model: 'Slice 4G'
-    - regex: 'IQ9610'
+    - regex: 'IQ9610[;)/ ]'
       model: 'Angel 3G'
-    - regex: 'IQG550'
+    - regex: 'IQG550[;)/ ]'
       model: 'Style 4G'
-    - regex: 'IQGW516'
+    - regex: 'IQGW516[;)/ ]'
       model: 'F5'
-    - regex: 'IQE100'
+    - regex: 'IQE100[;)/ ]'
       model: 'Energy 4G'
-    - regex: 'IQEL41'
+    - regex: 'IQEL41[;)/ ]'
       model: 'Fab 4G'
-    - regex: 'IQL30'
+    - regex: 'IQL30[;)/ ]'
       model: 'Status 4G'
-    - regex: 'IQL50'
+    - regex: 'IQL50[;)/ ]'
       model: 'More 4G'
-    - regex: 'IQL51'
+    - regex: 'IQL51[;)/ ]'
       model: 'Wave 4G'
-    - regex: 'IQM801'
+    - regex: 'IQM801[;)/ ]'
       model: 'Brace 2018 4G'
       device: 'tablet'
-    - regex: 'IQM1001'
+    - regex: 'IQM1001[;)/ ]'
       model: 'Level 4G'
       device: 'tablet'
-    - regex: 'IQN700'
+    - regex: 'IQN700[;)/ ]'
       model: 'Inspire 4G'
-    - regex: 'IQP50'
+    - regex: 'IQP50[;)/ ]'
       model: 'Ruby 4G'
-    - regex: 'IQS300'
+    - regex: 'IQS300[;)/ ]'
       model: 'DX 4G'
-    - regex: 'IQS1001'
+    - regex: 'IQS1001[;)/ ]'
       model: 'Vista 4G' ## Gold
       device: 'tablet'
-    - regex: 'IQR300'
+    - regex: 'IQR300[;)/ ]'
       model: 'R3 4G'
-    - regex: 'IQW608'
+    - regex: 'IQW608[;)/ ]'
       model: 'Regal'
-    - regex: 'IQW626'
+    - regex: 'IQW626[;)/ ]'
       model: 'D6 4G'
-    - regex: 'IQW511T'
+    - regex: 'IQW511T[;)/ ]'
       model: 'Liberal'
-    - regex: 'IQW553'
+    - regex: 'IQW553[;)/ ]'
       model: 'Alu 5.5'
 
 # Fly
@@ -15733,3 +15737,9 @@ Kzen:
   regex: 'Ureki_U1[);/ ]'
   device: 'smartphone'
   model: 'Ureki U1'
+
+# MELROSE
+Melrose:
+  regex: 'MELROSE_S9[);/ ]'
+  device: 'smartphone'
+  model: 'S9'
