feat(device) detect brand Fujitsu model: Easy Phone F-01L feat(device) detect brand Kyocera model: Digno (NP501KC) feat(device) detect brand Lenovo model: TAB3 8 (601LV) feat(device) detect brand LG model: Optimus it L-05D

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4890,11 +4890,13 @@ FNB:
 
 # Fujitsu
 Fujitsu:
-  regex: '(?:F-01[FHJK]|F-02[EFGHLK]|F-03[DEFGH]|F-04[EGK]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-41A|F-11D|F-12C|M532|FARTM933KZ|901FJ)[);/ ]'
+  regex: '(?:F-01[FHJKL]|F-02[EFGHLK]|F-03[DEFGH]|F-04[EGK]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-41A|F-11D|F-12C|M532|FARTM933KZ|901FJ)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'F-01F[);/ ]'
       model: 'Arrows NX F-01F'
+    - regex: 'F-01L[);/ ]'
+      model: 'Easy Phone F-01L'
     - regex: 'F-01J[);/ ]'
       model: 'Arrows NX F-01J'
     - regex: 'F-01K[);/ ]'
@@ -6987,7 +6989,7 @@ K-Touch:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|(?:503KC|602KC|705KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-68]|KYF3[179]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[1-6]|KYV47-u|KC-S301AE|X3-KC|S6-KC)[;/) ]'
+  regex: 'Kyocera|KWC-|QC-|(?:NP501KC|503KC|602KC|705KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-68]|KYF3[179]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[1-6]|KYV47-u|KC-S301AE|X3-KC|S6-KC)[;/) ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -7003,6 +7005,8 @@ Kyocera:
       model: 'Digno G'
     - regex: '503KC[;/) ]'
       model: 'Digno E'
+    - regex: 'NP501KC[;/) ]'
+      model: 'Digno'
     - regex: 'KYV36[;/) ]'
       model: 'Digno Rafre'
     - regex: 'C5170[;/) ]'
@@ -7347,7 +7351,7 @@ Lenco:
 
 # lenovo
 Lenovo:
-  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42|L18011|701LV|Z2131|K350t)[/;) ]'
+  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42|L18011|[67]01LV|Z2131|K350t)[/;) ]'
   device: 'smartphone'
   models:
     - regex: 'Lenovo ?G780'
@@ -7380,7 +7384,7 @@ Lenovo:
     - regex: 'TB3-710[IF]'
       model: 'TAB3 7 Essential'
       device: 'tablet'
-    - regex: 'TB3-850[FM]'
+    - regex: '(?:TB3-850[FM]|601LV)[/;) ]'
       model: 'TAB3 8'
       device: 'tablet'
     - regex: 'Lenovo TB-X304[FL]'
@@ -7608,7 +7612,7 @@ Lexibook:
 
 # LG
 LG:
-  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))[);/ ]|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-03K|L-01[LK]|L-51A|901LG'
+  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))[);/ ]|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-05D|L-03K|L-01[LK]|L-51A|901LG'
   device: 'smartphone'
   models:
     - regex: 'LG-D325'
@@ -7665,13 +7669,15 @@ LG:
       model: 'Risio 2'
     - regex: '(?:LG-)?P500H'
       model: 'Optimus One'
-    - regex: 'LG-L160L'
+    - regex: 'L-05D[);/ ]'
+      model: 'Optimus it L-05D'
+    - regex: 'LG-L160L[);/ ]'
       model: 'Optimus LTE 2'
-    - regex: 'P713'
+    - regex: 'P713[);/ ]'
       model: 'Optimus L7II'
-    - regex: 'L-01D'
+    - regex: 'L-01D[);/ ]'
       model: 'Optimus LTE L-01D'
-    - regex: 'L-02D'
+    - regex: 'L-02D[);/ ]'
       model: 'PRADA phone L-02D'
     - regex: 'L-07C'
       model: 'Optimus Bright L-07C'
