feat(device) detect brand Advan: model S5J+ feat(device) detect brand Google model: Pixel 3a XL feat(device) detect brand Ulefone model: Armor X3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -947,7 +947,7 @@ Acer:
 
 # Advan
 Advan:
-  regex: '(i7U|S45E|50[46]1|5059|S50H|I7D|i55[KD]|i4U|S7D|S4Z|i5[KE]|S5E[ _]NXT) Build'
+  regex: '(?:i7U|S45E|50[46]1|5059|S50H|I7D|i55[KD]|i4U|S7D|S4Z|i5[KE]|S5E[ _]NXT|S5J\+)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'i7U'
@@ -958,7 +958,7 @@ Advan:
       model: 'I$1'
     - regex: 'i4U'
       model: 'I4U'
-    - regex: '(S45E|50[46]1|5059|S50H|I7D|S7D|S4Z)'
+    - regex: '(S45E|50[46]1|5059|S50H|I7D|S7D|S4Z|S5J\+)[);/ ]'
       model: '$1'
 
 # Advance
@@ -2779,7 +2779,7 @@ bq:
       model: 'Belief'
     - regex: 'BQ[S]?-(?:5065|5340)[);/ ]'
       model: 'Choice'
-    - regex: 'BQ(?:ru)?-?(?:5059|5514G|)[);/ ]'
+    - regex: 'BQ(?:ru)?-?(?:5059|5514G)[);/ ]'
       model: 'Strike Power'
     - regex: 'BQ-5058[);/ ]'
       model: 'Strike Power Easy'
@@ -5207,6 +5207,8 @@ Google:
       model: 'Pixel 3 XL'
     - regex: 'Pixel 2 XL'
       model: 'Pixel 2 XL'
+    - regex: 'Pixel 3a XL'
+      model: 'Pixel 3a XL'
     - regex: 'Pixel 3a'
       model: 'Pixel 3a'
     - regex: 'Pixel 3'
@@ -12462,7 +12464,7 @@ UTStarcom:
 
 # Ulefone
 Ulefone:
-  regex: 'Ulefone|Gemini Pro|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[237]|X6|6S))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
+  regex: 'Ulefone|Gemini Pro|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[237]|X[63]|6S))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
   device: 'smartphone'
   models:
     - regex: 'S10_Pro'
@@ -12489,8 +12491,8 @@ Ulefone:
       model: 'Armor 3'
     - regex: 'Armor[ _]7[);\ ]'
       model: 'Armor 7'
-    - regex: 'Armor[ _]X6[);\ ]'
-      model: 'Armor X6'
+    - regex: 'Armor[ _]X([36])[);\ ]'
+      model: 'Armor X$1'
     - regex: 'Armor[ _]6S[);\ ]'
       model: 'Armor 6S'
     - regex: 'Armor[);\ ]'
