feat(device) detect new brand Crony model: 7021

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15743,3 +15743,9 @@ Melrose:
   regex: 'MELROSE_S9[);/ ]'
   device: 'smartphone'
   model: 'S9'
+
+# Crony
+Crony:
+  regex: 'CRONY-7021[);/ ]'
+  device: 'tablet'
+  model: '7021'
