feat(device) detect brand Turbo model: X5 Black (TurboX5Black)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11721,12 +11721,12 @@ Turbo-X:
 
 # Turbo
 Turbo:
-  regex: 'Turbo(X5Space|[_ ](?:X5[_ ](Max|Black)|X8|X6[ _]Z))[);/ ]'
+  regex: 'Turbo[_ ]?(?:X5[_ ]?(?:Max|Black|Space)|X8|X6[ _]Z)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'TurboX5Space[);/ ]'
       model: 'X5 Space'
-    - regex: 'Turbo[ _]X5[ _]Black[);/ ]'
+    - regex: 'Turbo[ _]?X5[ _]?Black[);/ ]'
       model: 'X5 Black'
     - regex: 'Turbo[ _]X5[ _]Max[);/ ]'
       model: 'X5 Max'
