feat(device) detect brand Krüger&Matz model: EAGLE 1065G 10.1" (KM1065G)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7097,7 +7097,7 @@ Kyocera:
 
 # Krüger&Matz (Kruger&Matz)
 Krüger&Matz:
-  regex: 'Kruger[ _&]Matz|MOVE_|LIVE4_KM043[89]|KM1066'
+  regex: 'Kruger[ _&]Matz|MOVE_|LIVE4_KM043[89]|KM1066|KM1065G'
   device: 'smartphone'
   models:
     - regex: 'MOVE_6_mini'
@@ -7118,6 +7118,9 @@ Krüger&Matz:
       model: 'LIVE 5 $1'
 
     - regex: 'KM(1066)[;/) ]'
+      device: 'tablet'
+      model: 'EAGLE $1 10.1"'
+    - regex: 'KM(1065G)[;/) ]'
       device: 'tablet'
       model: 'EAGLE $1 10.1"'
 
